ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.0-rc0
    • Affects Version/s: 2.5.5
    • Component/s: Index Maintenance
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Reproduced on standalone and replica sets. 2.4 correctly validates that the empty document is not valid.
      Shell:

      dgottlieb@keylime ~/xgen/mms/server[master]$ mongo --port 26000
      MongoDB shell version: 2.5.5
      connecting to: 127.0.0.1:26000/test
      Server has startup warnings: 
      2014-02-07T14:47:21.128-0500 [initandlisten] 
      2014-02-07T14:47:21.128-0500 [initandlisten] ** NOTE: This is a development version (2.5.5) of MongoDB.
      2014-02-07T14:47:21.128-0500 [initandlisten] **       Not recommended for production.
      2014-02-07T14:47:21.128-0500 [initandlisten] 
      test> show tables
      system.indexes
      test
      test> db.system.indexes.find()
      { "v" : 1, "key" : { "_id" : 1 }, "name" : "_id_", "ns" : "test.test" }
      { "v" : 1, "key" : { "name" : 1 }, "name" : "name_1", "ns" : "test.test" }
      test> db.system.indexes.insert({})
      2014-02-07T14:47:51.511-0500 DBClientCursor::init call() failed
      2014-02-07T14:47:51.511-0500 Error: error doing query: failed at src/mongo/shell/query.js:81
      2014-02-07T14:47:51.513-0500 trying reconnect to 127.0.0.1:26000 (127.0.0.1) failed
      2014-02-07T14:47:51.513-0500 warning: Failed to connect to 127.0.0.1:26000, reason: errno:111 Connection refused
      2014-02-07T14:47:51.513-0500 reconnect 127.0.0.1:26000 (127.0.0.1) failed failed couldn't connect to server 127.0.0.1:26000 (127.0.0.1), connection attempt failed
      test> 
      

      MongoD logs:

      2014-02-07T14:48:06.231-0500 [initandlisten] connection accepted from 127.0.0.1:52348 #1 (1 connection now open)
      2014-02-07T14:48:06.599-0500 [conn1] Fatal Assertion 16253
      2014-02-07T14:48:06.605-0500 [conn1] 0x114d711 0x10f0ab9 0x10d33ad 0x9f00d6 0x9f01b3 0x9dbf2c 0x9dd06d 0x9de850 0x9e0d39 0x9f6e1a 0x9f806d 0x9f9ad9 0xd051d0 0xb592ce 0xb5e672 0x75e627 0x11048fb 0x7fb1209b9e9a 0x7fb11fccc3fd 
       mongod(_ZN5mongo15printStackTraceERSo+0x21) [0x114d711]
       mongod(_ZN5mongo10logContextEPKc+0x159) [0x10f0ab9]
       mongod(_ZN5mongo13fassertFailedEi+0xcd) [0x10d33ad]
       mongod(_ZN5mongo4Lock7DBWrite6lockDBERKSs+0x2c6) [0x9f00d6]
       mongod(_ZN5mongo4Lock7DBWriteC1ERKNS_10StringDataE+0x63) [0x9f01b3]
       mongod(_ZN5mongo18WriteBatchExecutor11execInsertsERKNS_21BatchedCommandRequestEPSt6vectorIPNS_16WriteErrorDetailESaIS6_EE+0x39c) [0x9dbf2c]
       mongod(_ZN5mongo18WriteBatchExecutor11bulkExecuteERKNS_21BatchedCommandRequestEPSt6vectorIPNS_19BatchedUpsertDetailESaIS6_EEPS4_IPNS_16WriteErrorDetailESaISB_EE+0x3d) [0x9dd06d]
       mongod(_ZN5mongo18WriteBatchExecutor12executeBatchERKNS_21BatchedCommandRequestEPNS_22BatchedCommandResponseE+0x2e0) [0x9de850]
       mongod(_ZN5mongo8WriteCmd3runERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x669) [0x9e0d39]
       mongod(_ZN5mongo12_execCommandEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x3a) [0x9f6e1a]
       mongod(_ZN5mongo7Command11execCommandEPS0_RNS_6ClientEiPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xe4d) [0x9f806d]
       mongod(_ZN5mongo12_runCommandsEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x6c9) [0x9f9ad9]
       mongod(_ZN5mongo11newRunQueryERNS_7MessageERNS_12QueryMessageERNS_5CurOpES1_+0x24e0) [0xd051d0]
       mongod() [0xb592ce]
       mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x382) [0xb5e672]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xa7) [0x75e627]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x4fb) [0x11048fb]
       /lib/x86_64-linux-gnu/libpthread.so.0(+0x7e9a) [0x7fb1209b9e9a]
       /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7fb11fccc3fd]
      2014-02-07T14:48:06.605-0500 [conn1] 
      
      ***aborting after fassert() failure
      
      
      Got signal: 6 (Aborted).
      Backtrace:
      0x114d711 0x751cba 0x7fb11fc0e4a0 0x7fb11fc0e425 0x7fb11fc11b8b 0x10d341a 0x9f00d6 0x9f01b3 0x9dbf2c 0x9dd06d 0x9de850 0x9e0d39 0x9f6e1a 0x9f806d 0x9f9ad9 0xd051d0 0xb592ce 0xb5e672 0x75e627 0x11048fb 
       mongod(_ZN5mongo15printStackTraceERSo+0x21) [0x114d711]
       mongod(_ZN5mongo10abruptQuitEi+0x3ba) [0x751cba]
       /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7fb11fc0e4a0]
       /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x35) [0x7fb11fc0e425]
       /lib/x86_64-linux-gnu/libc.so.6(abort+0x17b) [0x7fb11fc11b8b]
       mongod(_ZN5mongo13fassertFailedEi+0x13a) [0x10d341a]
       mongod(_ZN5mongo4Lock7DBWrite6lockDBERKSs+0x2c6) [0x9f00d6]
       mongod(_ZN5mongo4Lock7DBWriteC1ERKNS_10StringDataE+0x63) [0x9f01b3]
       mongod(_ZN5mongo18WriteBatchExecutor11execInsertsERKNS_21BatchedCommandRequestEPSt6vectorIPNS_16WriteErrorDetailESaIS6_EE+0x39c) [0x9dbf2c]
       mongod(_ZN5mongo18WriteBatchExecutor11bulkExecuteERKNS_21BatchedCommandRequestEPSt6vectorIPNS_19BatchedUpsertDetailESaIS6_EEPS4_IPNS_16WriteErrorDetailESaISB_EE+0x3d) [0x9dd06d]
       mongod(_ZN5mongo18WriteBatchExecutor12executeBatchERKNS_21BatchedCommandRequestEPNS_22BatchedCommandResponseE+0x2e0) [0x9de850]
       mongod(_ZN5mongo8WriteCmd3runERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x669) [0x9e0d39]
       mongod(_ZN5mongo12_execCommandEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x3a) [0x9f6e1a]
       mongod(_ZN5mongo7Command11execCommandEPS0_RNS_6ClientEiPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xe4d) [0x9f806d]
       mongod(_ZN5mongo12_runCommandsEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x6c9) [0x9f9ad9]
       mongod(_ZN5mongo11newRunQueryERNS_7MessageERNS_12QueryMessageERNS_5CurOpES1_+0x24e0) [0xd051d0]
       mongod() [0xb592ce]
       mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x382) [0xb5e672]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xa7) [0x75e627]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x4fb) [0x11048fb]
      

            Assignee:
            Greg Studer (Inactive)
            Reporter:
            Daniel Gottlieb (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: