SERVER-12657 better validity checks for ns and index descriptors in write ops